# ovirt-server

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  autobuild.sh  autogen.sh  configure.ac  ovirt-installer-test-answers  ovirt-server.spec  ovirt-server.spec.in  release.mk
anyterm/: anyterm.css  anyterm.html  anyterm.js
conf/: ovirt-agent  ovirt-db-omatic  ovirt-host-browser  ovirt-host-collect  ovirt-host-register  ovirt-host-status  ovirt-mongrel-rails  ovirt-mongrel-rails.sysconf  ovirt-rails.sysconf  ovirt-server.conf  ovirt-server.crontab  ovirt-server.logrotate  ovirt-taskomatic  ovirt-vnc-proxy  ovirt-vnc-proxy.sysconf
contrib/: ovirt-server.fc14.spec
installer/appliances/ovirt-appliance/: ovirt-appliance.pp
scripts/: ovirt-add-host  ovirt-reindex-search  ovirt-server-install  ovirt-update-search  ovirt-vm2node  ovirt_ctl
src/: libvirt-list.rb  matahari-list.rb  qmf-libvirt-example.rb  qpid_list_demo.py
src/config/: database.yml  environment.rb  routes.rb  selenium.yml
src/db-omatic/: db_omatic.rb  vnc.rb
src/dutils/: active_record_env.rb  dutils.rb
src/flexchart/: README.txt  flexchart.mxml  flexchart.swf
src/host-browser/: host-browser.rb  host-register.rb
src/host-collect/: host-collect.rb
src/host-status/: host-status.rb
src/lib/: managed_node_configuration.rb
src/ovirt-agent/: ovirt-agent.rb  ovirt-test.rb  ovirt_api.xml
src/script/: grant_admin_privileges
src/task-omatic/: task_host.rb  task_storage.rb  task_vm.rb  taskomatic.rb  utils.rb  vnc.rb
src/test/: test_helper.rb
src/vnc-proxy/: vnc-proxy.rb
(+385 files in other folders)
